option('papi', type : 'feature', value : 'disabled', description : 'enable PAPI')
option('papi-dir', type : 'string', value : '', description : 'assume given directory for PAPI')
option('veperf', type : 'feature', value : 'disabled', description : 'enable VEPERF for SX Aurora')
option('veperf-dir', type : 'string', value : '', description : 'assume given directory for VEPERF')
option('mpi-profiling', type : 'feature', value : 'disabled', description : 'enable MPI profiling')
option('vmap-offset', type : 'feature', value : 'enabled', description : 'enable VMAP offset')
option('vmap-offset-check', type : 'boolean', value : true, description : 'enable VMAP offset check')
